--- a/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
+    "cloudinary": "^1.13.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
