--- a/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11",
+    "node": "^11.1.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
