--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-file-base64": "^1.0.3",
+    "react-md-spinner": "^0.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
