--- a/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
@@ -16,10 +16,10 @@
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
     "cloudinary": "^1.13.2",
+    "data": "file:../data",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.3.11",
     "node": "^11.1.0",
     "uuid": "^3.3.2"
   },
