--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chai": "^4.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-file-base64": "^1.0.3",
     "react-md-spinner": "^0.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "sessionstorage": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
