--- a/staff/francisco-fernandez/lets-talk/lets-talk-api/.env
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-api/.env
@@ -1,3 +1,9 @@
 PORT = 5000
 JWT_SECRET = my secret
 MONGO_URL = mongodb://localhost:27017/lets-talk
+PORT = 5000
+JWT_SECRET = my secret
+#MONGO_URL = mongodb://localhost:27017/lets-talk
+MONGO_URL = mongodb://localhost:27017/lets-talk-test
+
+TEST_MONGO_URL = mongodb://localhost:27017/lets-talk-test
