--- a/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-api/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node .",
     "debug": "node debug .",
-    "test": "mocha logic",
-    "debug-test": "mocha debug logic"
+    "test": "mocha logic --timeout 15000",
+    "debug-test": "mocha debug logic --timeout 15000"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,7 @@
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
     "cloudinary": "^1.13.2",
-    "data": "file:../data",
+    "lets-talk-data": "file:../lets-talk-data",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
