--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chai": "^4.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-file-base64": "^1.0.3",
     "react-md-spinner": "^0.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "sessionstorage": "^0.1.0"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test-logic": "mocha src/logic/index.spec.js",
+    "debug-test-logic": "mocha debug src/logic/index.spec.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,6 +28,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "data": "file:../data"
+    "chai": "^4.2.0",
+    "dotenv": "^6.2.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lets-talk-data": "file:../lets-talk-data",
+    "sessionstorage": "^0.1.0"
   }
 }
