--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/package.json
@@ -16,7 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test-logic": "mocha src/logic/index.spec.js",
-    "debug-test-logic": "mocha debug src/logic/index.spec.js"
+    "debug-test-logic": "mocha debug src/logic/index.spec.js",
+    "coverage": "nyc mocha src/logic/index.spec.js --timeout 15000",
+    "coverage-report": "nyc report --reporter=html"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +34,7 @@
     "dotenv": "^6.2.0",
     "isomorphic-fetch": "^2.2.1",
     "lets-talk-data": "file:../lets-talk-data",
+    "nyc": "^13.1.0",
     "sessionstorage": "^0.1.0"
   }
 }
